# photon-geocoding-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml
src/: api.rs  data.rs  error.rs  lib.rs
src/data/: filter.rs  json.rs
tests/: api_tests.rs
