[package]
name = "photon-geocoding"
version = "1.0.1"
authors = ["vollkorntomate <thomas@vollkorntomate.de>"]
description = "An API client for Komoot's Photon API written in and for Rust."
repository = "https://codeberg.org/vollkorntomate/photon-geocoding-rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["geocoding", "osm"]
edition = "2021"
rust-version = "1.64"

[dependencies]
ureq = { version = "2.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
